@startuml

title __CLIENT's Class Diagram__\n

  namespace pt.ulisboa.tecnico.surespace.orchestrator.client {
    class pt.ulisboa.tecnico.surespace.orchestrator.client.OrchestratorClient {
        - channel : ManagedChannel
        + OrchestratorClient()
        + close()
        + ping()
        + proveLocation()
        + requestAuthorization()
        + requestProofInformation()
        {static} - exceptionFromStatus()
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.orchestrator.client {
    class pt.ulisboa.tecnico.surespace.orchestrator.client.OrchestratorClientException {
        {static} - serialVersionUID : long
        + OrchestratorClientException()
    }
  }
  

  pt.ulisboa.tecnico.surespace.orchestrator.client.OrchestratorClient -up-|> pt.ulisboa.tecnico.surespace.common.connection.Client
  pt.ulisboa.tecnico.surespace.orchestrator.client.OrchestratorClient o-- pt.ulisboa.tecnico.surespace.orchestrator.grpc.OrchestratorServiceGrpc.OrchestratorServiceFutureStub : stub
  pt.ulisboa.tecnico.surespace.orchestrator.client.OrchestratorClientException -up-|> pt.ulisboa.tecnico.surespace.common.exception.BroadException


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
